[tool.poetry]
name = "mypyc"
version = "0.1.0"
description = ""
authors = ["Branch Vincent <branchevincent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
mypy = "^0.910"
pre-commit = "^2.13.0"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^6.2.4"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
clean = { cmd = "rm -rf .*_cache/ build/ dist/ *.egg-info", help = "Remove build artifacts" }
lint = { cmd = "pre-commit run --all-files", help = "Run linters and formatters" }
test = { cmd = "pytest", help = "Run tests" }

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
