[tool.poetry]
name = "demo"
description = "A demo using Typer"
version = "1.0.0"
authors = ["Branch Vincent <demo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.2.2"
mypy = "^0.790"
poethepoet = "^0.9.0"
pre-commit = "^2.8.2"

[tool.poetry.scripts]
demo = "demo.__main__:app"

[tool.poe.tasks]
lint = { cmd = "pre-commit run --all-files", help = "Run linters and formatters" }

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
